4491 libumem should not use instant fit allocator by default 4490 libumem should support up to 128k slabs Reviewed by: Brendan Gregg <brendan.gregg@joyent.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Dan McDonald <danmcd@omniti.com> Reviewed by: Josef 'Jeff' Sipek <jeffpc@josefsipek.net> Approved by: Garrett D'Amore <garrett@damore.org>